# WhoLock

./: .gitignore  Cargo.toml  README.md  README.zh.md  build.rs
.github/workflows/: ci.yml  release.yml
.kiro/: rust-env.ps1
.kiro/specs/file-lock-inspector/: .config.kiro  design.md  requirements.md  tasks.md
docs/: manual-test-checklist.md
resources/: app.manifest  app.rc
src/: app.rs  config.rs  elevation.rs  error.rs  i18n.rs  integration_tests.rs  logging.rs  main.rs  terminator.rs
src/detector/: enumerate.rs  mod.rs  restart_manager.rs  win32_rm.rs
src/monitor/: clock.rs  engine.rs  mod.rs  scheduler.rs
src/process_info/: mod.rs  token.rs
src/state/: app_state.rs  mod.rs  target.rs
src/sys_classifier/: blacklist.rs  mod.rs
src/ui/: dialogs.rs  dropping.rs  mod.rs  process_row.rs  status_bar.rs  target_list.rs
